--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,39 +2,18 @@ on:
   workflow_dispatch:
 jobs:
   release:
-    name: Release - ${{ matrix.platform.release_for }}
+    name: release ${{ matrix.target }}
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        platform:
-          - release_for: FreeBSD-x86_64
-            os: ubuntu-20.04
-            target: x86_64-unknown-freebsd
-            bin: tenhou-parser-rs
-            name: tenhou-parser-rs-FreeBSD-x86_64.tar.gz
-            command: build
-
-          - release_for: Windows-x86_64
-            os: windows-latest
-            target: x86_64-pc-windows-msvc
-            bin: tenhou-parser-rs.exe
-            name: tenhou-parser-rs-Windows-x86_64.zip
-            command: both
-
-          - release_for: macOS-x86_64
-            os: macOS-latest
-            target: x86_64-apple-darwin
-            bin: tenhou-parser-rs
-            name: tenhou-parser-rs-Darwin-x86_64.tar.gz
-            command: both
-
-    runs-on: ${{ matrix.platform.os }}
+        target: [x86_64-pc-windows-gnu, x86_64-unknown-linux-musl]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Build binary
-        uses: houseabsolute/actions-rust-cross@v0
+      - uses: actions/checkout@master
+      - name: Compile and release
+        uses: rust-build/rust-build.action@v1.4.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          command: ${{ matrix.platform.command }}
-          target: ${{ matrix.platform.target }}
-          args: "--locked --release"
-          strip: true
+          RUSTTARGET: ${{ matrix.target }}
+          EXTRA_FILES: "README.md LICENSE"
